Fix secondary button color on mobile (Safari blue border bug) (#86)

--- a/frontend/src/style/components/_button.scss
+++ b/frontend/src/style/components/_button.scss
@@ -22,6 +22,7 @@ button {
   }
   &.secondary {
     background-color: transparent;
+    color: $darkColor;
     &:hover:not(:disabled),
     &.active {
       color: white;
